# server/src/main/kotlin/com/jakubspiewak/sheep/expense/ExpenseBlueprintApiDelegateImpl.kt
@@ -1,24 +1,24 @@
 package com.jakubspiewak.sheep.expense
 
-import com.jakubspiewak.sheep.generated.api.ExpenseBlueprintApiDelegate
-import com.jakubspiewak.sheep.generated.model.ExpenseBlueprintCreateRequest
-import com.jakubspiewak.sheep.generated.model.ExpenseBlueprintResponse
-import com.jakubspiewak.sheep.generated.model.ExpenseBlueprintUpdateRequest
+import com.jakubspiewak.sheep.generated.api.ExpenseScheduleApiDelegate
+import com.jakubspiewak.sheep.generated.model.ExpenseScheduleCreateRequest
+import com.jakubspiewak.sheep.generated.model.ExpenseScheduleResponse
+import com.jakubspiewak.sheep.generated.model.ExpenseScheduleUpdateRequest
 import org.bson.types.ObjectId
 import org.springframework.http.ResponseEntity
 import org.springframework.stereotype.Service
 
 @Service
-class ExpenseBlueprintApiDelegateImpl(private val repository: ExpenseBlueprintRepository) : ExpenseBlueprintApiDelegate {
-    override fun createExpenseBlueprint(expenseBlueprintCreateRequest: ExpenseBlueprintCreateRequest): ResponseEntity<ExpenseBlueprintResponse> {
-        val expenseBlueprintDocument = ExpenseBlueprintDocument(
+class ExpenseScheduleApiDelegateImpl(private val repository: ExpenseScheduleRepository) : ExpenseScheduleApiDelegate {
+    override fun createExpenseSchedule(expenseScheduleCreateRequest: ExpenseScheduleCreateRequest): ResponseEntity<ExpenseScheduleResponse> {
+        val expenseBlueprintDocument = ExpenseScheduleDocument(
             id = ObjectId(),
-            name = expenseBlueprintCreateRequest.name,
-            estimatedAmount = expenseBlueprintCreateRequest.estimatedAmount,
-            frequency = expenseBlueprintCreateRequest.frequency,
-            startDate = expenseBlueprintCreateRequest.startDate,
-            endDate = expenseBlueprintCreateRequest.endDate,
-            tags = expenseBlueprintCreateRequest.tags?.map { ObjectId(it) } ?: listOf()
+            name = expenseScheduleCreateRequest.name,
+            estimatedAmount = expenseScheduleCreateRequest.estimatedAmount,
+            frequency = expenseScheduleCreateRequest.frequency,
+            startDate = expenseScheduleCreateRequest.startDate,
+            endDate = expenseScheduleCreateRequest.endDate,
+            tags = expenseScheduleCreateRequest.tags?.map { ObjectId(it) } ?: listOf()
         )
         repository.save(expenseBlueprintDocument)
 
@@ -26,13 +26,13 @@ class ExpenseBlueprintApiDelegateImpl(private val repository: ExpenseBlueprintRe
         return ResponseEntity.ok(response)
     }
 
-    override fun deleteExpenseBlueprint(blueprintId: String): ResponseEntity<Unit> {
+    override fun deleteExpenseSchedule(blueprintId: String): ResponseEntity<Unit> {
         val objectId = ObjectId(blueprintId)
         repository.deleteById(objectId)
         return ResponseEntity.noContent().build()
     }
 
-    override fun getExpenseBlueprintById(blueprintId: String): ResponseEntity<ExpenseBlueprintResponse> {
+    override fun getExpenseScheduleById(blueprintId: String): ResponseEntity<ExpenseScheduleResponse> {
         val objectId = ObjectId(blueprintId)
         val expenseBlueprint = repository.findById(objectId)
 
@@ -43,16 +43,16 @@ class ExpenseBlueprintApiDelegateImpl(private val repository: ExpenseBlueprintRe
         }
     }
 
-    override fun getExpenseBlueprints(): ResponseEntity<List<ExpenseBlueprintResponse>> {
+    override fun getExpenseSchedules(): ResponseEntity<List<ExpenseScheduleResponse>> {
         val expenseBlueprints = repository.findAll()
         val response = expenseBlueprints.map { it.toResponse() }
         return ResponseEntity.ok(response)
     }
 
-    override fun updateExpenseBlueprint(
+    override fun updateExpenseSchedule(
         blueprintId: String,
-        expenseBlueprintUpdateRequest: ExpenseBlueprintUpdateRequest
-    ): ResponseEntity<ExpenseBlueprintResponse> {
+        expenseScheduleUpdateRequest: ExpenseScheduleUpdateRequest
+    ): ResponseEntity<ExpenseScheduleResponse> {
         val objectId = ObjectId(blueprintId)
         val existingBlueprintOptional = repository.findById(objectId)
 
@@ -62,12 +62,12 @@ class ExpenseBlueprintApiDelegateImpl(private val repository: ExpenseBlueprintRe
 
         val existingBlueprint = existingBlueprintOptional.get()
         val updatedBlueprint = existingBlueprint.copy(
-            name = expenseBlueprintUpdateRequest.name ?: existingBlueprint.name,
-            estimatedAmount = expenseBlueprintUpdateRequest.estimatedAmount ?: existingBlueprint.estimatedAmount,
-            frequency = expenseBlueprintUpdateRequest.frequency ?: existingBlueprint.frequency,
-            startDate = expenseBlueprintUpdateRequest.startDate ?: existingBlueprint.startDate,
-            endDate = expenseBlueprintUpdateRequest.endDate ?: existingBlueprint.endDate,
-            tags = expenseBlueprintUpdateRequest.tags?.map { ObjectId(it) } ?: existingBlueprint.tags
+            name = expenseScheduleUpdateRequest.name ?: existingBlueprint.name,
+            estimatedAmount = expenseScheduleUpdateRequest.estimatedAmount ?: existingBlueprint.estimatedAmount,
+            frequency = expenseScheduleUpdateRequest.frequency ?: existingBlueprint.frequency,
+            startDate = expenseScheduleUpdateRequest.startDate ?: existingBlueprint.startDate,
+            endDate = expenseScheduleUpdateRequest.endDate ?: existingBlueprint.endDate,
+            tags = expenseScheduleUpdateRequest.tags?.map { ObjectId(it) } ?: existingBlueprint.tags
         )
 
         repository.save(updatedBlueprint)
